# LogOps-AI

./: .env  README.md  cli.py  datapaths.py  docker-compose.yml  model_registry.py  pyproject.toml  requirements.txt  test_api.py
app/: api.py  deps.py  schemas.py  settings.py
core/: anomaly_iforest.py  context.py  events.py  featurize.py  ingest.py
data/: events.sqlite  lake.duckdb  sample.jsonl
llm/: explain_ollama.py  prompts.py
tests/: test_client.py  test_iforest.py  test_ingest.py
