[project]
name = "logops"
version = "0.1.0"
description = "Log operations and anomaly detection system"
authors = [
    {name = "Mohammad Ariz Khan",email = "khan02ariz@gmail.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi (>=0.116.1,<0.117.0)",
    "uvicorn (>=0.35.0,<0.36.0)",
    "pydantic (>=2.11.7,<3.0.0)",
    "duckdb (>=1.3.2,<2.0.0)",
    "pandas (>=2.3.1,<3.0.0)",
    "scikit-learn (>=1.7.1,<2.0.0)",
    "numpy (>=2.3.2,<3.0.0)",
    "httpx (>=0.28.1,<0.29.0)",
    "typer (>=0.16.0,<0.17.0)",
    "pydantic-settings (>=2.10.1,<3.0.0)",
    "requests (>=2.32.4,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
pytest = "^8.4.1"

